Start page: hide item count in pb-paginate to avoid scrolling on small screens

--- a/resources/css/home.css
+++ b/resources/css/home.css
@@ -378,3 +378,8 @@ pb-manage-odds{
     --pb-manage-odds-icon-color:#555;
 }
 
+@media (max-width: 440px) {
+    pb-paginate::part(count) {
+        display: none;
+    }
+}
